--- a/index.html
+++ b/index.html
@@ -1,15 +1,57 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>www.julius3d.com</title>
-		<link rel="stylesheet" type="text/css" href="css/styles.css">
-	</head>
-	<body>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>www.julius3d.com</title>
+	
+	<!-- Vendor CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	
+	<!-- Custom CSS -->
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
-		<h1>Ello World ^_^/</h1>
-		
+</head>
+<body>
 
-	</body>
+<section id="my-quiz">
+	<h1>Routing:</h1>
+	<!-- Progress div: -->
+	<div class="j-progress"></div>
+	<!-- Intro div: -->
+	<div class="intro">
+		<h2>Intro</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid exercitationem facilis minus obcaecati
+		   omnis perspiciatis recusandae tenetur! Aliquam commodi cumque exercitationem harum illo ipsa iure
+		   perspiciatis quam sapiente unde!</p>
+		<button class="btn btn-warning">Begin</button>
+	</div>
+	<!-- Question div: -->
+	<div class="question">
+		<p class="txt">What is front end routing?</p>
+		<p class="ans">Styling elements in a webpage</p>
+		<p class="ans">Server side page switching</p>
+		<p class="ans">Client side page switching</p>
+		<p class="ans">DB operations on the server</p>
+		<div class="feedback"></div>
+	</div>
+	<!-- Results div: -->
+	<div class="results"></div>
+</section>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+	<div class="container">
+		<a href="https://github.com/ideaguy3d/ng-quiz-app" class="btn btn-lg">
+			<strong>Source Code for this app</strong>
+		</a>
+	</div>
+</nav>
+
+
+<!-- Vendor Scripts -->
+<script src="vendor/angular/angular.min.js"></script>
+
+<!-- Custom Scripts -->
+
+</body>
 </html>
