--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 
 </head>
 <body>
@@ -29,10 +29,10 @@
 	<!-- Question div: -->
 	<div class="question">
 		<p class="txt">What is front end routing?</p>
-		<p class="ans">Styling elements in a webpage</p>
-		<p class="ans">Server side page switching</p>
-		<p class="ans">Client side page switching</p>
-		<p class="ans">DB operations on the server</p>
+		<p class="ans">Styling elements in a webpage.</p>
+		<p class="ans">Server side page switching.</p>
+		<p class="ans selected">Client side page switching.</p>
+		<p class="ans">DB operations on the server.</p>
 		<div class="feedback"></div>
 	</div>
 	<!-- Results div: -->
