finished styling answer states

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<p class="txt">What is front end routing?</p>
 		<p class="ans">Styling elements in a webpage.</p>
 		<p class="ans">Server side page switching.</p>
-		<p class="ans selected">Client side page switching.</p>
+		<p class="ans">Client side page switching.</p>
 		<p class="ans">DB operations on the server.</p>
 		<div class="feedback"></div>
 	</div>
